--- a/index.html
+++ b/index.html
@@ -458,6 +458,10 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-email">
+          <p class="footer-email-paragraf">Subscribe</p>
+        </div>
       </div>
     </footer>
 
