--- a/index.html
+++ b/index.html
@@ -461,6 +461,10 @@
 
         <div class="footer-email">
           <p class="footer-email-paragraf">Subscribe</p>
+
+          <form class="footer-form" action="">
+            
+          </form>
         </div>
       </div>
     </footer>
