--- a/index.html
+++ b/index.html
@@ -497,15 +497,18 @@
     </footer>
 
     <div class="data-modal is-hidden" data-modal>
+      
       <div class="modal-page">
-        <p class="modal-page-p">Leave your contacts and we will call you back</p>
-
         <button class="button-modal" type="button" data-modal-close>
           <svg class="icon-modal" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
       </div>
+      <p class="modal-page-p">Leave your contacts and we will call you back</p>
+      <form>
+        <div></div>
+      </form>
     </div>
     <script src="./js/modal.js"></script>
   </body>
