--- a/index.html
+++ b/index.html
@@ -462,7 +462,6 @@
         <div class="footer-email">
           <p class="footer-email-paragraf">Subscribe</p>
 
-          <!-- <form class="footer-form"> -->
           <form
             class="footer-form"
             name="feedback_form"
@@ -497,18 +496,19 @@
     </footer>
 
     <div class="data-modal is-hidden" data-modal>
-      
       <div class="modal-page">
         <button class="button-modal" type="button" data-modal-close>
           <svg class="icon-modal" width="8" height="8">
             <use href="./images/icons.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="modal-page-p">
+          Leave your contacts and we will call you back
+        </p>
+        <form>
+          <div></div>
+        </form>
       </div>
-      <p class="modal-page-p">Leave your contacts and we will call you back</p>
-      <form>
-        <div></div>
-      </form>
     </div>
     <script src="./js/modal.js"></script>
   </body>
