--- a/index.html
+++ b/index.html
@@ -468,14 +468,6 @@
             autocomplete="off"
             novalidate
           >
-            <!-- <label class="footer-form-label" for="emails" -->
-            <!-- ><input -->
-            <!-- class="footer-form-input" -->
-            <!-- type="email" -->
-            <!-- name="emails" -->
-            <!-- placeholder="E-mail" -->
-            <!-- /></label> -->
-
             <label class="footer-form-label">
               <input
                 class="footer-form-input"
@@ -506,7 +498,50 @@
           Leave your contacts and we will call you back
         </p>
         <form>
-          <div></div>
+          <div class="modal-forms">
+            <label class="modal-forms-label" for="user-name">Name</label>
+            <div class="modal-forms-input">
+              <input
+                class="modal-input"
+                type="text"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="modal-forms-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-forms">
+            <label class="modal-forms-label" for="user-name">Phone</label>
+            <div class="modal-forms-input">
+              <input
+                class="modal-input"
+                type="text"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="modal-forms-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone"></use>
+              </svg>
+            </div>
+          </div>
+
+          <div class="modal-forms">
+            <label class="modal-forms-label" for="user-name">Email</label>
+            <div class="modal-forms-input">
+              <input
+                class="modal-input"
+                type="text"
+                id="user-name"
+                name="user-name"
+              />
+              <svg class="modal-forms-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
         </form>
       </div>
     </div>
