--- a/index.html
+++ b/index.html
@@ -514,13 +514,13 @@
           </div>
 
           <div class="modal-forms">
-            <label class="modal-forms-label" for="user-name">Phone</label>
+            <label class="modal-forms-label" for="user-phone">Phone</label>
             <div class="modal-forms-input">
               <input
                 class="modal-input"
                 type="text"
-                id="user-name"
-                name="user-name"
+                id="user-phone"
+                name="user-phone"
               />
               <svg class="modal-forms-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
@@ -529,17 +529,48 @@
           </div>
 
           <div class="modal-forms">
-            <label class="modal-forms-label" for="user-name">Email</label>
+            <label class="modal-forms-label" for="user-email">Email</label>
             <div class="modal-forms-input">
               <input
                 class="modal-input"
                 type="text"
-                id="user-name"
-                name="user-name"
+                id="user-email"
+                name="user-email"
               />
               <svg class="modal-forms-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
+            </div>
+          </div>
+
+          <div class="modal-forms">
+            <label class="modal-forms-label" for="user-comment">Comment</label>
+            <textarea
+              class="modal-forms-textarea"
+              name="user-comment"
+              id="user-comment"
+              cols="30"
+              rows="10"
+              placeholder="Text input"
+            ></textarea>
+            <div class="modal-forms-checkbox">
+              <input
+                class="visually-hidden"
+                type="checkbox"
+                id="user-privacy"
+                value="true"
+                name="user-privacy"
+              />
+              <label class="modal-forms-label-check" for="user-privacy"
+                >I accept the terms and conditions of the
+                <span class="modal-forms-span"
+                  >Privacy Policy<svg
+                    class="modal-forms-icon"
+                    width="10"
+                    height="8"
+                  >
+                    <use href="./images/icons.svg#icon-email"></use></svg></span
+              ></label>
             </div>
           </div>
         </form>
