--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 
           <div class="modal-forms-checkbox">
             <input
-              class="visually-hidden"
+              class="input-checkbox visually-hidden"
               type="checkbox"
               id="user-privacy"
               value="true"
