--- a/index.html
+++ b/index.html
@@ -543,10 +543,10 @@
             </div>
           </div>
 
-          <div class="modal-forms">
+          <div class="modal-forms-textarea">
             <label class="modal-forms-label" for="user-comment">Comment</label>
             <textarea
-              class="modal-forms-textarea"
+              class="modal-forms-text"
               name="user-comment"
               id="user-comment"
               cols="30"
