--- a/index.html
+++ b/index.html
@@ -566,14 +566,15 @@
             <label class="modal-forms-label-check" for="user-privacy"
               >I accept the terms and conditions of the
               <span class="modal-forms-span"
-                >Privacy Policy<svg
-                  class="modal-forms-icon"
-                  width="10"
-                  height="8"
-                >
-                  <use href="./images/icons.svg#icon-email"></use></svg></span
+                ><a class="modal-forms-span-link" href="">Privacy Policy</a
+                ><svg class="modal-forms-icon" width="10" height="8">
+                  <use
+                    href="./images/icons.svg#icon-checkmark2"
+                  ></use></svg></span
             ></label>
           </div>
+
+          <button class="button-modal-send">Send</button>
         </form>
       </div>
     </div>
