--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@
 
           <div class="modal-forms-checkbox">
             <input
-              class="input-checkbox visually-hidden1"
+              class="input-checkbox visually-hidden"
               type="checkbox"
               id="user-privacy"
               value="true"
@@ -575,10 +575,11 @@
             <label class="modal-forms-label-check" for="user-privacy"
               >I accept the terms and conditions of the<span
                 class="modal-forms-span"
-                ><svg class="test-icon" width="10" height="8">
+                ><svg class="modal-forms-icon" width="10" height="8">
                   <use
-                    href="./images/icons.svg#icon-checkmark2"
+                    href="./images/icons.svg#icon-close"
                   ></use></svg></span
+              ><a class="modal-forms-span-link" href="">Privacy Policy</a
             ></label>
           </div>
 
