--- a/index.html
+++ b/index.html
@@ -560,27 +560,18 @@
               class="input-checkbox visually-hidden"
               type="checkbox"
               id="user-privacy"
-              value="true"
               name="user-privacy"
+              value="true"
             />
-            <!-- <label class="modal-forms-label-check" for="user-privacy"
-              >I accept the terms and conditions of the
-              <span class="modal-forms-span"
-                ><a class="modal-forms-span-link" href="">Privacy Policy</a
-                ><svg class="modal-forms-icon" width="10" height="8">
-                  <use
-                    href="./images/icons.svg#icon-checkmark2"
-                  ></use></svg></span
-            ></label> -->
-            <label class="modal-forms-label-check" for="user-privacy"
-              >I accept the terms and conditions of the<span
-                class="modal-forms-span"
-                ><svg class="modal-forms-icon" width="10" height="8">
-                  <use
-                    href="./images/icons.svg#icon-close"
-                  ></use></svg></span
-              ><a class="modal-forms-span-link" href="">Privacy Policy</a
-            ></label>
+            <label class="modal-forms-label-check" for="user-privacy">
+              <span class="modal-forms-span">
+                <svg class="modal-forms-span-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-checkmark"></use>
+                </svg>
+              </span>
+              I accept the terms and conditions of the
+              <a href="#" class="modal-forms-span-link">Privacy Policy</a>
+            </label>
           </div>
 
           <button class="button-modal-send" type="submit">Send</button>
