--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@
                   <use href="./images/icons.svg#icon-checkmark"></use>
                 </svg>
               </span>
-              I accept the terms and conditions of the
+              I accept the terms and conditions of the&nbsp;
               <a href="#" class="modal-forms-span-link">Privacy Policy</a>
             </label>
           </div>
